add and style header section

--- a/index.html
+++ b/index.html
@@ -1,31 +1,75 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Knowledge Vault</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="icon" href="assets/logo-navbar.png" type="image/png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="icon" href="assets/logo-navbar.png" type="image/png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
     <!-- start header section -->
-     <div class="header-container">
+    <header>
+      <div class="header-container">
         <div class="header-logo">
-            <img src="assets/logo-navbar.png" alt="">
+          <img src="assets/logo-navbar.png" alt="" />
         </div>
         <div class="nav-menu">
-            <ul>
-                <li><a href="">Features</a></li>
-                <li><a href="">How It Works</a></li>
-                <li><a href="">Why It's Different</a></li>
-            </ul>
+          <ul>
+            <li><a href="">Features</a></li>
+            <li><a href="">How It Works</a></li>
+            <li><a href="">Why It's Different</a></li>
+          </ul>
         </div>
-        <button class="nav-button">Get Early Access</button>
-     </div>
+        <button class="nav-button button-primary">Get Early Access</button>
+      </div>
+
+      <section class="banner">
+        <div class="banner-container">
+          <div class="banner-content">
+            <div class="first-text">
+              <img src="assets/Group 5.png" alt="" />
+              <p>Early Access Now Open</p>
+            </div>
+            <h1>
+              Structured thinking,<br /><span
+                style="color: rgba(48, 184, 104, 1)"
+                >not just note-taking.</span
+              >
+            </h1>
+            <p class="heading-text">
+              A private space to store notes, links, and learning summaries —
+              designed <br />to help you think clearly, connect ideas, and turn
+              learning into long-term knowledge.
+            </p>
+            <div class="button-container">
+              <button class="btn btn-green">
+                Start Building Your Vault
+                <img class="btn-icon" src="assets/ArrowRight.png" alt="" />
+              </button>
+
+              <button class="btn btn-outline">
+                <img class="btn-icon" src="assets/Play - Copy.png" alt="" />See
+                How It Works
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </header>
     <!-- end header section -->
-</body>
+  </body>
 </html>
