add and style card section

--- a/index.html
+++ b/index.html
@@ -71,5 +71,51 @@
       </section>
     </header>
     <!-- end header section -->
+
+    <!-- start card section -->
+    <section class="card">
+      <div class="card-content">
+        <div class="card-heading">
+          <h4>Notes don't fail, Structure does.</h4>
+          <p>Notes don't fail, Structure does.</p>
+        </div>
+        <div class="card-list">
+          <div class="card-info">
+            <div class="img-icon">
+              <img src="assets/Vector.png" alt=" " />
+            </div>
+            <h4>Scattered notes</h4>
+            <p>Your ideas live in 10 different apps, none of them connected.</p>
+          </div>
+          <div class="card-info">
+            <div class="img-icon">
+              <img src="assets/Bookmarks.png" alt=" " />
+            </div>
+            <h4>Bookmark overload</h4>
+            <p>Hundreds of saved links you'll never revisit or remember.</p>
+          </div>
+          <div class="card-info">
+            <div class="img-icon">
+              <img src="assets/Brain.png" alt=" " />
+            </div>
+            <h4>No idea connections</h4>
+            <p>
+              Insights stay isolated, never building into bigger understanding.
+            </p>
+          </div>
+          <div class="card-info">
+            <div class="img-icon">
+              <img src="assets/Info.png" alt=" " />
+            </div>
+            <h4>
+              Forgetting what <br />
+              you learned
+            </h4>
+            <p>Knowledge fades because there's no system to retain it.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end card section -->
   </body>
 </html>
