add and style brain section

--- a/index.html
+++ b/index.html
@@ -117,5 +117,54 @@
       </div>
     </section>
     <!-- end card section -->
+
+    <!-- start brain section -->
+    <section class="brain">
+      <div class="brain-container">
+        <div class="brain-content">
+          <img class="brain-img" src="assets/knowledge.png" alt="" />
+          <div class="brain-text">
+            <p class="green-text">The Solution</p>
+            <h2>Your second brain, structured by design.</h2>
+            <p class="normal-text">
+              Personal Knowledge Vault isn't another note-taking app. <br />It's
+              a thinking environment where every note, link, and summary
+              <br />becomes part of an interconnected web of understanding.
+            </p>
+            <div class="p-list">
+              <p>
+                <img
+                  src="assets/CheckCircle.png"
+                  alt=""
+                  class="list-icon"
+                />Capture ideas with structure built-in from day one
+              </p>
+              <p>
+                <img
+                  src="assets/CheckCircle.png"
+                  alt=""
+                  class="list-icon"
+                />Connect related concepts automatically as you write
+              </p>
+              <p>
+                <img
+                  src="assets/CheckCircle.png"
+                  alt=""
+                  class="list-icon"
+                />Build lasting knowledge through reflection prompts
+              </p>
+              <p>
+                <img
+                  src="assets/CheckCircle.png"
+                  alt=""
+                  class="list-icon"
+                />Find anything instantly with semantic search
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end brain section -->
   </body>
 </html>
