add and style tink section

--- a/index.html
+++ b/index.html
@@ -166,5 +166,20 @@
       </div>
     </section>
     <!-- end brain section -->
+
+    <!-- start think section -->
+    <section class="think">
+      <div class="think-container">
+        <div class="think-content">
+          <h2>Ready to think more clearly?</h2>
+          <p>
+            Join thousands of learners who are building their personal knowledge
+            vaults.<br />Start free, no credit card required.
+          </p>
+          <button class="button-primary">Get Early Access</button>
+        </div>
+      </div>
+    </section>
+    <!-- end think section -->
   </body>
 </html>
