--- a/index.html
+++ b/index.html
@@ -24,17 +24,19 @@
     <!-- start header section -->
     <header>
       <div class="header-container">
-        <div class="header-logo">
-          <img src="assets/logo-navbar.png" alt="" />
+        <div class="header-content">
+          <div class="header-logo">
+            <img src="assets/logo-navbar.png" alt="" />
+          </div>
+          <div class="nav-menu">
+            <ul>
+              <li><a href="">Features</a></li>
+              <li><a href="">How It Works</a></li>
+              <li><a href="">Why It's Different</a></li>
+            </ul>
+          </div>
+          <button class="nav-button button-primary">Get Early Access</button>
         </div>
-        <div class="nav-menu">
-          <ul>
-            <li><a href="">Features</a></li>
-            <li><a href="">How It Works</a></li>
-            <li><a href="">Why It's Different</a></li>
-          </ul>
-        </div>
-        <button class="nav-button button-primary">Get Early Access</button>
       </div>
 
       <section class="banner">
@@ -176,10 +178,48 @@
             Join thousands of learners who are building their personal knowledge
             vaults.<br />Start free, no credit card required.
           </p>
-          <button class="button-primary">Get Early Access</button>
+          <button class="button-primary think-btn">
+            Get Early Access<img
+              class="btn-icon"
+              src="assets/ArrowRight.png"
+              alt=""
+            />
+          </button>
         </div>
       </div>
     </section>
     <!-- end think section -->
+
+    <!-- start footer section -->
+    <footer>
+      <div class="footer-content">
+        <div class="social-box">
+          <div class="footer-logo">
+            <img src="assets/logo-navbar.png" alt="" />
+          </div>
+          <div class="social">
+            <h3>Social Links</h3>
+            <a href=""
+              ><img class="socials-icons" src="assets/fi_5969020.png" alt=""
+            /></a>
+            <a href=""
+              ><img class="socials-icons" src="assets/fi_5968764.png" alt=""
+            /></a>
+            <a href=""
+              ><img class="socials-icons" src="assets/fi_145807.png" alt=""
+            /></a>
+          </div>
+        </div>
+      </div>
+      <div class="copy">
+        <div class="line"><hr /></div>
+        <p>
+          <small
+            >&copy;2026 Personal Knowledge Vault. All rights reserved.</small
+          >
+        </p>
+      </div>
+    </footer>
+    <!-- end footer section -->
   </body>
 </html>
